Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -1,8 +1,8 @@
 .parallax-container {
     position: relative;
     height: 100vh;
-    /*transform-style: preserve-3d;*/
-    /*-webkit-transform-style: preserve-3d;*/
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
 }
 
 .parallax-container::before {
@@ -14,7 +14,7 @@
     background-position: top center;
     background-size: cover;
     z-index: -1;
-    /*transform: translateZ(-100px) scale(2);*/
+    transform: translateZ(-100px) scale(2);
 }
 
 
@@ -23,7 +23,7 @@
     position: absolute;
     width: 100%;
     height: 100vh;
-    /*transform: translateZ(-50px) scale(1.5);*/
+    transform: translateZ(-50px) scale(1.5);
 }
 
 .truck > div {
